# AI_Evaluation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
faiss_index/: index.faiss  index.pkl
